<resources>
    <string name="app_name">Chalange</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="first_page_sine_up_button_via_email">Sine Up Via Email</string>
    <string name="first_page_sine_up_button_via_phone">Sine Up Via Phone</string>
    <string name="sine_in_button">Sine In</string>
    <string name="title_activity_sine_up">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="title_activity_login">Sign in</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="famale">Famale</string>
    <string name="error_invalid_name">This name is incorrect</string>
    <string name="android_studio_android_com">android.studio@android.com</string>

    <string name="facebook_app_id">183353138886628</string>
    <string name="fb_login_protocol_scheme">6e22314322052e0f880e6af67a65c3ac</string>
    <string name="title_activity_sine_in_via_facebook">Sign in</string>

    <string name="frend_added_you_in_her_frend_list">I added you in my frends list)</string>
    <string name="title_activity_waiting_challenge_request">WaitingChallengeRequestActivity</string>

    <!--<resources>-->
    <!--<string name="com.twitter.sdk.android.CONSUMER_KEY">SAA88uKZVjD33ms6kWnuPcD8m</string>-->
    <!--<string name="com.twitter.sdk.android.CONSUMER_SECRET">L5AGXdRYjg27aA8OYBV4Id28lFDPf4E8dLpU6oOZsznJMCSV91</string>-->
    <!--</resources>-->

</resources>
