<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="com.example.ghazar.chalange.FirstPage.FirstActivity"
    android:weightSum="1">

        <ProgressBar
            android:id="@+id/login_progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@xml/progress"
            android:padding="120dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <Button
                            android:id="@+id/sine_up_by_phone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@android:color/holo_green_light"
                            android:drawableBottom="@color/colorPrimary"
                            android:text="@string/first_page_sine_up_button_via_phone"></Button>

                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/sine_up_by_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp" />

                        <Button
                            android:id="@+id/sine_up_by_email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@android:color/holo_green_light"
                            android:drawableBottom="@color/colorPrimary"
                            android:text="@string/first_page_sine_up_button_via_email"></Button>

                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/sine_up_by_google"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp" />

                        <Button
                            android:id="@+id/is_sine_in"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/colorAccent"
                            android:drawableBottom="@color/colorPrimary"
                            android:text="@string/sine_in_button"></Button>
                </LinearLayout>
        </ScrollView>

</LinearLayout>
